--- a/docs/bugtests/build.xml
+++ b/docs/bugtests/build.xml
@@ -72,6 +72,7 @@
     <fop fofile="${foDir}/word-spacing.fo" pdffile="${testDir}/word-spacing.pdf"/>
     <fop fofile="${foDir}/wrap.fo" pdffile="${testDir}/wrap.pdf"/>
     <fop fofile="${foDir}/image.fo" pdffile="${testDir}/image.pdf"/>
+    <fop fofile="${foDir}/space-before.fo" pdffile="${testDir}/space-before.pdf"/>
   </target>
 
 
