JDK 1.1.x changes. Thanks to Art Welch.
git-svn-id: https://svn.apache.org/repos/asf/xmlgraphics/fop/trunk@193920 13f79535-47bb-0310-9956-ffa450edef68

--- a/build.xml
+++ b/build.xml
@@ -253,7 +253,7 @@ Sometimes ant gives out this warnings, but the build is finished without any pro
   <!-- compiles hyphenation patterns                                       -->
   <!-- =================================================================== -->
 
-  <target name="hyphenation" depends="prepare,compile" >
+  <target name="hyphenation" depends="prepare" >
     <serHyph includes="*.xml" 
              sourceDir="./hyph" 
              targetDir="${build.dest}/hyph" /> 
