--- a/docs/xml-docs/build.xml
+++ b/docs/xml-docs/build.xml
@@ -27,8 +27,8 @@ These are the meaningful targets for this build file:
     <property name="outfile.fo" value="fop.fo"/>
     <property name="outfile.pdf" value="fop.pdf"/>
 
-    <taskdef name="fop" classname="Fop"/>
-    <taskdef name="xslt" classname="Xslt"/>
+    <taskdef name="fop" classname="org.apache.fop.tools.anttasks.Fop"/>
+    <taskdef name="xslt" classname="org.apache.fop.tools.anttasks.Xslt"/>
 
   </target>
 
