Fixed a small bug in the prepare-src target for dealing with dual versions of Xalan.
git-svn-id: https://svn.apache.org/repos/asf/xmlgraphics/fop/trunk@193971 13f79535-47bb-0310-9956-ffa450edef68

--- a/build.xml
+++ b/build.xml
@@ -323,7 +323,7 @@ Sometimes ant gives out this warnings, but the build is finished without any pro
     <!-- copy src files -->
     <copydir src="${src.dir}"
              dest="${build.src}"
-             excludes="**/Makefile*, **/package.html, **/XT*,**/PDFOutputHandler.java,**/${jimi},**/${jai},**/${pfmreader}"/>
+             excludes="**/Makefile*, **/package.html, **/XT*,**/PDFOutputHandler.java,**/${jimi},**/${jai},**/${pfmreader},**/${xsltransform},**/${trax},**/${xalan1}"/>
   </target>
 
   <!-- =================================================================== -->
