Added support for PDF outlines (aka bookmarks). See the example in docs/examples/fo/pdfoutline.fo for an example. PR: Obtained from: Submitted by: Reviewed by:
git-svn-id: https://svn.apache.org/repos/asf/xmlgraphics/fop/trunk@194025 13f79535-47bb-0310-9956-ffa450edef68

--- a/build.xml
+++ b/build.xml
@@ -168,6 +168,8 @@ Sometimes ant gives out this warnings, but the build is finished without any pro
     <property name="src.properties.xsl" value="${src.codegen}/properties.xsl"/>
     <property name="foproperties.xml" value="${build.codegen}/foproperties.xml"/>
     <property name="svgproperties.xml" value="${build.codegen}/svgproperties.xml"/>
+    <property name="extproperties.xml" value="${build.codegen}/extproperties.xml"/>
+
     <property name="properties.xsl" value="${build.codegen}/properties.xsl"/>
     <property name="propmap.xsl" value="${build.codegen}/propmap.xsl"/>
     <property name="enumgen.xsl" value="${build.codegen}/enumgen.xsl"/>
@@ -337,24 +339,40 @@ Sometimes ant gives out this warnings, but the build is finished without any pro
 
     <!-- generate the java files from xml resources -->
     <echo message="Generating the java files from xml resources"/>
+
     <xslt infile="${foproperties.xml}" xsltfile="${properties.xsl}"
         dependent="${propinc.xsl}"
         outfile="${build.src}/${replacestring}/fo/properties/fo_${ignore_this}" smart="yes"/>
-    <xslt infile="${svgproperties.xml}" xsltfile="${properties.xsl}"
-        dependent="${propinc.xsl}"
-        outfile="${build.src}/${replacestring}/fo/properties/svg_${ignore_this}" smart="yes"/>
     <xslt infile="${foproperties.xml}" xsltfile="${propmap.xsl}"
         dependent="${propinc.xsl}"
         outfile="${build.src}/${replacestring}/fo/properties/FOPropertyMapping.java" smart="yes"/>
-    <xslt infile="${svgproperties.xml}" xsltfile="${propmap.xsl}"
-        dependent="${propinc.xsl}"
-        outfile="${build.src}/${replacestring}/fo/properties/SVGPropertyMapping.java" smart="yes"/>
     <xslt infile="${foproperties.xml}" xsltfile="${enumgen.xsl}"
         dependent="${propinc.xsl}"
         outfile="${build.src}/${replacestring}/fo/properties/foenums_${ignore_this}" smart="yes"/>
+
+
+    <xslt infile="${svgproperties.xml}" xsltfile="${properties.xsl}"
+        dependent="${propinc.xsl}"
+        outfile="${build.src}/${replacestring}/fo/properties/svg_${ignore_this}" smart="yes"/>
+    <xslt infile="${svgproperties.xml}" xsltfile="${propmap.xsl}"
+        dependent="${propinc.xsl}"
+        outfile="${build.src}/${replacestring}/fo/properties/SVGPropertyMapping.java" smart="yes"/>
     <xslt infile="${svgproperties.xml}" xsltfile="${enumgen.xsl}"
         dependent="${propinc.xsl}"
         outfile="${build.src}/${replacestring}/fo/properties/svgenums_${ignore_this}" smart="yes"/>
+
+    <xslt infile="${extproperties.xml}" xsltfile="${properties.xsl}"
+        dependent="${propinc.xsl}"
+        outfile="${build.src}/${replacestring}/fo/properties/ext_${ignore_this}" smart="yes"/>
+    <xslt infile="${extproperties.xml}" xsltfile="${propmap.xsl}"
+        dependent="${propinc.xsl}"
+        outfile="${build.src}/${replacestring}/fo/properties/ExtensionPropertyMapping.java" smart="yes"/>
+    <xslt infile="${extproperties.xml}" xsltfile="${enumgen.xsl}"
+        dependent="${propinc.xsl}"
+        outfile="${build.src}/${replacestring}/fo/properties/extenums_${ignore_this}" smart="yes"/>
+
+
+
     <xslt infile="${charlist.xml}" xsltfile="${charlist.xsl}" 
         outfile="${build.src}/${replacestring}/render/pdf/CodePointMapping.java" smart="yes"/>
     <xslt infile="${Courier.xml}" xsltfile="${fontfile.xsl}" mergefile="${charlist.xml}"
