--- a/docs/examples/build.xml
+++ b/docs/examples/build.xml
@@ -58,6 +58,7 @@
     <fop fofile="${foDir}/simple.fo" pdffile="${testDir}/simple.pdf"/>
     <fop fofile="${foDir}/hyphen.fo" pdffile="${testDir}/hyphen.pdf"/>
     <fop fofile="${foDir}/character.fo" pdffile="${testDir}/character.pdf"/>
+    <fop fofile="${foDir}/pdfoutline.fo" pdffile="${testDir}/pdfoutline.pdf"/>
   </target>
 
 
