for jdk1.1 compatibility: exclude jdk1.2 dependent files from build
git-svn-id: https://svn.apache.org/repos/asf/xmlgraphics/fop/trunk@194087 13f79535-47bb-0310-9956-ffa450edef68

--- a/build.xml
+++ b/build.xml
@@ -163,8 +163,8 @@ Sometimes ant gives out this warnings, but the build is finished without any pro
                      ,org/apache/fop/viewer/**
                      ,**/GifJpegImage.java
                      ,**/JimiImage.java
-                     ,**/PrintCommandLine.java
-                     ,**/AWTCommandLine.java"/>
+                     ,**/PrintStarter.java
+                     ,**/AWTStarter.java"/>
 
     <property name="xslt" value="org.apache.xalan.xslt.Process"/>
     <property name="src.properties.xsl" value="${src.codegen}/properties.xsl"/>
